--- a/public/styles.css
+++ b/public/styles.css
@@ -39,7 +39,8 @@
     align-items: center;
     cursor: pointer;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 30px;
+    padding-right: 50px;
 }
 
 .fa-gem {
@@ -62,7 +63,7 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    padding: 0 16px;
+    padding: 0 50px;
     height: 100%;
 }
 
@@ -99,4 +100,24 @@
 .navigationBar__links:hover {
     color: green;
     transition: all 0.3s ease;
+}
+
+.homeMsg__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    padding: 25px 16px;
+    height: 100%;
+}
+
+.homeMsg__links {
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    padding: 0 50px;
+    height: 100%;
+    font-size: 50px;
 }
